# so_long

./: .gitignore  CMakeLists.txt  Makefile  README.md  brick.xpm
headers/: main.h
imgs/: beagle_boy.xpm  coin.xpm  collectible.xpm  end.xpm  enemy.xpm  exit.xpm  free_space.xpm  player_left.xpm  player_right.xpm  uncle_scrooge.xpm  wall.xpm
include/: 0_main.h  1_error_management.h  2_map_checking.h  3_map_importing.h  4_get_next_line.h  5_textures_loading.h  6_map_printing.h  7_put_to_window_img.h  8_hooks.h  9_move_player_and_update_position.h  9_player.h  colors.h  enemies.h  enemies_initial_setup.h  enemies_movement.h  error_and_free.h  error_management.h  get_next_line.h  gradients.h  hooks.h  init.h  main.h  map_checking.h  map_importing.h  map_printing.h  move_player.h  move_player_and_update_position.h  player.h  print_shapes.h  put_to_window_img.h  textures.h  textures_loading.h  types.h  utils.h
lib/libft/: Makefile
lib/libft/srcs/change_case/: ft_tolower.c  ft_toupper.c
lib/libft/srcs/is/: ft_isalpha.c  ft_isascii.c  ft_isprint.c
lib/libft/srcs/lst/: ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c
lib/libft/srcs/mem/: ft_memccpy.c  ft_memcpy.c  ft_memset.c
lib/libft/srcs/memalloc/: ft_str_malloc.c
lib/libft/srcs/put/: ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
lib/libft/srcs/stack/: stack_bottom.c  stack_size.c
lib/libft/srcs/str/: ft_split.c  ft_str_eraser.c  ft_strchr.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libs/libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back.c  ft_lstdelone.c  ft_lstmap.c  ft_memccpy.c  ft_memcmp.c  ft_memset.c  ft_split.c  ft_strdup.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  libft.h  stack_bottom.c  stack_clear.c  stack_new.c  stack_push.c
libs/libft/include/: libft.h
libs/libft/srcs/is/: ft_isalnum.c  ft_isdigit.c
libs/libft/srcs/lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c
libs/libft/srcs/math/: ft_abs.c  ft_power.c
libs/libft/srcs/matrix/: ft_free_matrix.c
libs/libft/srcs/mem/: ft_bzero.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c
libs/libft/srcs/memalloc/: ft_array_malloc.c  ft_calloc.c  ft_other_malloc.c
libs/libft/srcs/put/: ft_putchar_fd.c  ft_putnbr_fd.c
libs/libft/srcs/stack/: stack_clear.c  stack_new.c  stack_pop.c  stack_push.c  stack_size.c
libs/libft/srcs/str/: ft_split.c  ft_str_eraser.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c
libs/libft/srcs/type_conversion/: ft_atoi.c  ft_itoa.c
maps/: cubic.ber
src/: enemies_initial_setup.c  enemies_movement.c  error_and_free.c  get_next_line.c  hooks.c  init.c  main.c  map_printing.c  player.c  put_to_window_img.c
srcs/: 0_main.c  1_error_management.c  2_map_checking.c  3_map_importing.c  4_get_next_line.c  5_textures_loading.c  6_map_printing.c  7_put_to_window_img.c  8_hooks.c  9_move_player_and_update_position.c  9_player.c  colors.c  enemies.c  enemies_initial_setup.c  enemies_movement.c  error_and_free.c  error_management.c  get_next_line.c  get_next_line_utils.c  gradients.c  hooks.c  init.c  main.c  map_checking.c  map_importing.c  map_printing.c  move_player.c  move_player_and_update_position.c  player.c  print_shapes.c  put_to_window_img.c  textures.c  textures_loading.c  utils.c
